-- =============================================
-- MIGRACION: MODULO DE AUDITORIA Y SEGURIDAD
-- PostgreSQL - BancoGT
-- =============================================

CREATE TABLE IF NOT EXISTS auditoria_eventos (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_usuario INTEGER NULL REFERENCES usuario(id_usuario) ON DELETE SET NULL,
    username VARCHAR(100) NULL,
    rol VARCHAR(50) NULL,
    accion VARCHAR(100) NOT NULL,
    modulo VARCHAR(100) NOT NULL,
    descripcion TEXT NULL,
    ip VARCHAR(100) NULL,
    user_agent TEXT NULL,
    estado VARCHAR(30) NOT NULL DEFAULT 'OK',
    metadata JSONB DEFAULT '{}'::jsonb,
    fecha TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX IF NOT EXISTS idx_auditoria_fecha
    ON auditoria_eventos (fecha DESC);

CREATE INDEX IF NOT EXISTS idx_auditoria_usuario
    ON auditoria_eventos (id_usuario, fecha DESC);

CREATE INDEX IF NOT EXISTS idx_auditoria_username
    ON auditoria_eventos (username, fecha DESC);

CREATE INDEX IF NOT EXISTS idx_auditoria_modulo
    ON auditoria_eventos (modulo, fecha DESC);

CREATE INDEX IF NOT EXISTS idx_auditoria_accion
    ON auditoria_eventos (accion, fecha DESC);

CREATE INDEX IF NOT EXISTS idx_auditoria_estado
    ON auditoria_eventos (estado, fecha DESC);
