-- =============================================
-- BASE DE DATOS POSTGRESQL - BANCO INDUSTRIAL
-- Incluye modulo interbancario SWIFT.
-- Pensado para Railway y ejecucion local.
-- =============================================

DROP TABLE IF EXISTS api_keys_bancos CASCADE;
DROP TABLE IF EXISTS transferencias_interbancarias CASCADE;
DROP TABLE IF EXISTS movimiento CASCADE;
DROP TABLE IF EXISTS transferencia CASCADE;
DROP TABLE IF EXISTS cuenta CASCADE;
DROP TABLE IF EXISTS cliente CASCADE;
DROP TABLE IF EXISTS usuario CASCADE;
DROP TABLE IF EXISTS bancos_externos CASCADE;
DROP TABLE IF EXISTS banco CASCADE;
DROP TABLE IF EXISTS tipo_cuenta CASCADE;
DROP TABLE IF EXISTS tipo_movimiento CASCADE;
DROP TABLE IF EXISTS estado_transferencia CASCADE;
DROP TABLE IF EXISTS moneda CASCADE;
DROP TABLE IF EXISTS rol CASCADE;

-- =============================================
-- TABLAS CATALOGO
-- =============================================

CREATE TABLE rol (
    id_rol INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) UNIQUE NOT NULL
);

CREATE TABLE moneda (
    id_moneda INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo CHAR(3) UNIQUE NOT NULL,
    nombre VARCHAR(50) NOT NULL
);

CREATE TABLE tipo_cuenta (
    id_tipo_cuenta INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre_tipo VARCHAR(50) NOT NULL
);

CREATE TABLE estado_transferencia (
    id_estado_transferencia INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(50) NOT NULL
);

CREATE TABLE banco (
    id_banco INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre_banco VARCHAR(150) NOT NULL
);

CREATE TABLE tipo_movimiento (
    id_tipo_movimiento INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre_tipo VARCHAR(50) NOT NULL,
    signo CHAR(1) DEFAULT '+'
);

-- =============================================
-- TABLAS PRINCIPALES
-- =============================================

CREATE TABLE usuario (
    id_usuario INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre_usuario VARCHAR(50) UNIQUE NOT NULL,
    correo VARCHAR(150) UNIQUE NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    id_rol INTEGER NOT NULL REFERENCES rol(id_rol),
    dpi VARCHAR(20) NULL,
    codigo_empleado VARCHAR(20) NULL UNIQUE,
    id_cliente INTEGER NULL,
    intentos_fallidos INTEGER DEFAULT 0,
    ultimo_acceso TIMESTAMP NULL,
    estado BOOLEAN DEFAULT TRUE,
    fecha_creacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE cliente (
    id_cliente INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(100) NOT NULL,
    apellido VARCHAR(100) NOT NULL,
    dpi VARCHAR(20) UNIQUE NOT NULL,
    nit VARCHAR(20) NULL,
    fecha_nacimiento DATE NULL,
    telefono VARCHAR(20) NULL,
    correo VARCHAR(150) NULL,
    direccion TEXT NULL,
    id_usuario INTEGER NULL UNIQUE REFERENCES usuario(id_usuario),
    estado BOOLEAN DEFAULT TRUE,
    fecha_registro TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

ALTER TABLE usuario
ADD CONSTRAINT fk_usuario_cliente
FOREIGN KEY (id_cliente) REFERENCES cliente(id_cliente) ON DELETE SET NULL;

CREATE TABLE cuenta (
    id_cuenta INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    numero_cuenta VARCHAR(30) UNIQUE NOT NULL,
    id_cliente INTEGER NOT NULL REFERENCES cliente(id_cliente),
    id_banco INTEGER NOT NULL REFERENCES banco(id_banco),
    id_tipo_cuenta INTEGER NOT NULL REFERENCES tipo_cuenta(id_tipo_cuenta),
    id_moneda INTEGER NOT NULL REFERENCES moneda(id_moneda),
    saldo NUMERIC(15,2) DEFAULT 0.00,
    fecha_apertura DATE NOT NULL,
    estado VARCHAR(20) DEFAULT 'ACTIVA'
);

CREATE TABLE transferencia (
    id_transferencia INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_cuenta_origen INTEGER NOT NULL REFERENCES cuenta(id_cuenta),
    id_cuenta_destino INTEGER NOT NULL REFERENCES cuenta(id_cuenta),
    monto NUMERIC(15,2) NOT NULL,
    fecha_transferencia TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    referencia VARCHAR(100) NULL,
    descripcion TEXT NULL,
    id_estado_transferencia INTEGER NOT NULL REFERENCES estado_transferencia(id_estado_transferencia),
    id_cajero INTEGER NULL REFERENCES usuario(id_usuario)
);

CREATE TABLE movimiento (
    id_movimiento INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_cuenta INTEGER NOT NULL REFERENCES cuenta(id_cuenta),
    id_tipo_movimiento INTEGER NOT NULL REFERENCES tipo_movimiento(id_tipo_movimiento),
    monto NUMERIC(15,2) NOT NULL,
    saldo_anterior NUMERIC(15,2) NOT NULL,
    saldo_nuevo NUMERIC(15,2) NOT NULL,
    fecha_movimiento TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    descripcion TEXT NULL,
    id_transferencia INTEGER NULL REFERENCES transferencia(id_transferencia),
    id_cajero INTEGER NULL REFERENCES usuario(id_usuario),
    tipo_operacion VARCHAR(50) DEFAULT 'VENTANILLA'
);

-- =============================================
-- MODULO INTERBANCARIO SWIFT
-- =============================================

CREATE TABLE bancos_externos (
    id_banco_externo INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    nombre VARCHAR(150) NOT NULL,
    swift VARCHAR(20) NOT NULL UNIQUE,
    base_url VARCHAR(255) NOT NULL,
    endpoint_validacion VARCHAR(255) NOT NULL DEFAULT '/api/transferencia/validar',
    endpoint_transferencia VARCHAR(255) NOT NULL DEFAULT '/api/transferencias/interbancaria/entrante',
    activo BOOLEAN DEFAULT TRUE,
    fecha_creacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    fecha_actualizacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE transferencias_interbancarias (
    id_transferencia_interbancaria INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tipo VARCHAR(20) NOT NULL CHECK (tipo IN ('SALIENTE', 'ENTRANTE')),
    id_cuenta_origen INTEGER NULL REFERENCES cuenta(id_cuenta) ON DELETE SET NULL,
    numero_cuenta_origen VARCHAR(30) NULL,
    id_cuenta_destino INTEGER NULL REFERENCES cuenta(id_cuenta) ON DELETE SET NULL,
    numero_cuenta_destino VARCHAR(30) NULL,
    banco_origen_swift VARCHAR(20) NULL,
    banco_destino_swift VARCHAR(20) NULL,
    banco_destino_nombre VARCHAR(150) NULL,
    monto NUMERIC(15,2) NOT NULL,
    moneda CHAR(3) NOT NULL DEFAULT 'GTQ',
    descripcion TEXT NULL,
    estado VARCHAR(20) NOT NULL DEFAULT 'PENDIENTE' CHECK (estado IN ('PENDIENTE', 'CONFIRMADA', 'RECHAZADA', 'ERROR')),
    referencia_interna VARCHAR(80) NOT NULL UNIQUE,
    referencia_externa VARCHAR(150) NULL,
    idempotency_key VARCHAR(150) NOT NULL,
    id_movimiento INTEGER NULL REFERENCES movimiento(id_movimiento) ON DELETE SET NULL,
    request_payload TEXT NULL,
    response_payload TEXT NULL,
    error_mensaje TEXT NULL,
    fecha_creacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    fecha_actualizacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_inter_tipo_idempotency UNIQUE (tipo, idempotency_key)
);

CREATE INDEX idx_inter_estado ON transferencias_interbancarias (estado);
CREATE INDEX idx_inter_swift_destino ON transferencias_interbancarias (banco_destino_swift);
CREATE INDEX idx_inter_swift_origen ON transferencias_interbancarias (banco_origen_swift);

CREATE TABLE api_keys_bancos (
    id_api_key INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    id_banco_externo INTEGER NULL REFERENCES bancos_externos(id_banco_externo) ON DELETE SET NULL,
    nombre VARCHAR(150) NOT NULL,
    api_key_hash CHAR(64) NOT NULL UNIQUE,
    activo BOOLEAN DEFAULT TRUE,
    fecha_creacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    fecha_actualizacion TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

-- =============================================
-- DATOS INICIALES
-- =============================================

INSERT INTO rol (id_rol, nombre) VALUES
(1, 'ADMIN'),
(2, 'GERENTE'),
(3, 'CAJERO'),
(4, 'CLIENTE');

INSERT INTO moneda (id_moneda, codigo, nombre) VALUES
(1, 'GTQ', 'Quetzal'),
(2, 'USD', 'Dolar');

INSERT INTO tipo_cuenta (id_tipo_cuenta, nombre_tipo) VALUES
(1, 'Ahorro'),
(2, 'Corriente'),
(3, 'Plazo Fijo');

INSERT INTO estado_transferencia (id_estado_transferencia, nombre) VALUES
(1, 'Pendiente'),
(2, 'Completada'),
(3, 'Rechazada');

INSERT INTO banco (id_banco, nombre_banco) VALUES
(1, 'Banco Industrial');

INSERT INTO tipo_movimiento (id_tipo_movimiento, nombre_tipo, signo) VALUES
(1, 'Deposito', '+'),
(2, 'Retiro', '-'),
(3, 'Transferencia Enviada', '-'),
(4, 'Transferencia Recibida', '+');

INSERT INTO usuario (id_usuario, nombre_usuario, correo, password_hash, id_rol, codigo_empleado, estado, dpi) VALUES
(1, 'admin', 'admin@banco.com', 'Admin123!', 1, 'ADMIN001', TRUE, '1234567890101'),
(2, 'cajero', 'cajero@banco.com', 'cajero123', 3, 'EMP0001', TRUE, '9876543210101');

INSERT INTO cliente (id_cliente, nombre, apellido, dpi, correo, telefono, direccion, id_usuario, estado) VALUES
(1, 'Administrador', 'Sistema', '1234567890101', 'admin@banco.com', '5550001', 'Zona 1, Guatemala', 1, TRUE),
(2, 'Cajero', 'Principal', '9876543210101', 'cajero@banco.com', '5550002', 'Zona 2, Guatemala', 2, TRUE);

UPDATE usuario SET id_cliente = 1 WHERE id_usuario = 1;
UPDATE usuario SET id_cliente = 2 WHERE id_usuario = 2;

INSERT INTO cuenta (numero_cuenta, id_cliente, id_banco, id_tipo_cuenta, id_moneda, saldo, fecha_apertura, estado) VALUES
('GT100000001', 1, 1, 1, 1, 10000.00, CURRENT_DATE, 'ACTIVA'),
('GT100000002', 2, 1, 1, 1, 5000.00, CURRENT_DATE, 'ACTIVA');

INSERT INTO movimiento (id_cuenta, id_tipo_movimiento, monto, saldo_anterior, saldo_nuevo, descripcion, id_cajero, fecha_movimiento) VALUES
(1, 1, 500.00, 10000.00, 10500.00, 'Deposito de prueba', 2, NOW()),
(1, 2, 200.00, 10500.00, 10300.00, 'Retiro de prueba', 2, NOW());

-- Ajustar secuencias despues de insertar IDs explicitos.
SELECT setval(pg_get_serial_sequence('rol', 'id_rol'), (SELECT MAX(id_rol) FROM rol));
SELECT setval(pg_get_serial_sequence('moneda', 'id_moneda'), (SELECT MAX(id_moneda) FROM moneda));
SELECT setval(pg_get_serial_sequence('tipo_cuenta', 'id_tipo_cuenta'), (SELECT MAX(id_tipo_cuenta) FROM tipo_cuenta));
SELECT setval(pg_get_serial_sequence('estado_transferencia', 'id_estado_transferencia'), (SELECT MAX(id_estado_transferencia) FROM estado_transferencia));
SELECT setval(pg_get_serial_sequence('banco', 'id_banco'), (SELECT MAX(id_banco) FROM banco));
SELECT setval(pg_get_serial_sequence('tipo_movimiento', 'id_tipo_movimiento'), (SELECT MAX(id_tipo_movimiento) FROM tipo_movimiento));
SELECT setval(pg_get_serial_sequence('usuario', 'id_usuario'), (SELECT MAX(id_usuario) FROM usuario));
SELECT setval(pg_get_serial_sequence('cliente', 'id_cliente'), (SELECT MAX(id_cliente) FROM cliente));
SELECT setval(pg_get_serial_sequence('cuenta', 'id_cuenta'), (SELECT MAX(id_cuenta) FROM cuenta));
SELECT setval(pg_get_serial_sequence('movimiento', 'id_movimiento'), (SELECT MAX(id_movimiento) FROM movimiento));
